--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.SushiPatria"
         tools:targetApi="31">
         <activity
+            android:name=".activityRealizarPedido"
+            android:exported="false" />
+        <activity
+            android:name=".activityCalificanos"
+            android:exported="false" />
+        <activity
+            android:name=".activityDisponible"
+            android:exported="false" />
+        <activity
+            android:name=".activityMenuPrincipal"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
