3ro login terminado, menu principal terminado, menu disponible terminado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:name=".activityRealizarPedido"
             android:exported="false" />
         <activity
+            android:name=".activity_disponible"
+            android:exported="false" />
+        <activity
             android:name=".activityCalificanos"
             android:exported="false" />
         <activity
