--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.SushiPatria"
         tools:targetApi="31">
         <activity
+            android:name=".activityVerPedidos"
+            android:exported="false" />
+        <activity
+            android:name=".activityEditarPedido"
+            android:exported="false" />
+        <activity
             android:name=".activityCrearUsuario"
             android:exported="false" />
         <activity
